--- a/src/components/Calculator/index.css
+++ b/src/components/Calculator/index.css
@@ -1,51 +1,66 @@
-#clear-btn {
-    height: 4em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: lighter;
-    font-size: 1.4em;
-    background-color: #c5c3cd;
-    color: #888;
-    flex: 1;
-    outline: 1px solid #888888;
-    border-bottom-left-radius: 3%;
-    border-bottom-right-radius: 3%;
-  }
+.input {
+  width: 100%;
+  min-height: 2em;
+  display: flex;
+  text-align: end;
+  font-weight: lighter;
+  resize: horizontal;
+  /* justify-content: left; */
+  /* align-items: center; */
+  /* font-weight: lighter; */
+  font-size: 5em;
+  background-color: #535151;
+  color: #ffffff;
+  padding: 0.5em 0.2em 0 0;
+  outline: 1px solid #0c0c0c;
+ 
+}
 
-  .btnNum {
+input {
+  resize: horizontal;
+  width: 200px;
+}
+
+.input:active {
+  width: auto;   
+}
+
+.input:focus {
+  min-width: 200px;
+}
+
+.btnNum {
     min-height: 3em;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: lighter;
+    font-weight: bolder;
     font-size: 1.9em;
-    background-color: #e0e1e6;
-    color: #888;
+    background-color: #888888;
+    color: #fff;
     flex: 1;
-    margin-top: -20px;
-    /* outline: 1px solid #888; */
-  }
+    /* margin-top: -20px; */
+    outline: 1px solid #0c0c0c;
+}
 
-  .operator {
+.operator {
     background-color: #fe9241;
     color: #ffffff;
     font-size: 2.2em;
-  }
-
-  .result {
-    width: 100%;
-    min-height: 2em;
-    display: flex;
-    text-align: end;
-    /* justify-content: left; */
-    /* align-items: center; */
-    /* font-weight: lighter; */
-    font-size: 5em;
-    background-color: #888888;
-    color: #ffffff;
-    padding: 0.5em 0.2em 0 0;
-    outline: 1px solid #88888888;
-    border-top-left-radius: 3%;
-    border-top-right-radius: 3%;
 }
+
+#clear-btn {
+  height: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bolder;
+  font-size: 1.4em;
+  /* background-color: #9e9ba8; */
+  background-color: #888888;
+  color: #fff;
+  flex: 1;
+  outline: 1px solid #0c0c0c;
+ 
+}
+
