--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
-  /* display: block; */
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
+  /* display: inline-flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* height: 100vh; */
+  /* width: 100%; */
 }
 
 .row {
