--- a/src/components/Calculator/index.css
+++ b/src/components/Calculator/index.css
@@ -1,9 +1,3 @@
-.title {
-  color: #a52a2a;
-  font-size: 1.5em;
-  text-align: center;
-}
-
 .result {
   width: 100%;
   min-height: 2em;
@@ -15,6 +9,7 @@
   background-color: #535151;
   color: #ffffff;
   padding: 0.5em 0.2em 0 0;
+  margin-top: 2.5em;
   outline: 1px solid #0c0c0c;
  
 }
