--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,3 +1,6 @@
-/* #sticky-footer {
-    flex-shrink: none;
-  } */
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+ }
